--- a/docs/wut_thesis/main.tex
+++ b/docs/wut_thesis/main.tex
@@ -20,7 +20,6 @@
 \usepackage{float}
 \usepackage{ltablex}
 \usepackage{xltabular}
-
 \langpol % Dla języka angielskiego mamy \langeng
 \graphicspath{{img/}}             % Katalog z obrazkami.
 \addbibresource{bibliografia.bib} % Plik .bib z bibliografią
@@ -143,7 +142,18 @@ has been prepared that perform the measurements and send them to the system.
 \acronymlist
 \acronym{EiTI}{Wydział Elektroniki i Technik Informacyjnych}
 \acronym{PW}{Politechnika Warszawska}
-\acronym{WEIRD}{ang. \emph{Western, Educated, Industrialized, Rich and Democratic}}
+\acronym{ADS}{Addresses Data Service}
+\acronym{FDS}{Facilities Data Service}
+\acronym{PDS}{Policies Data Service}
+\acronym{SDS}{Sensors Data Service}
+\acronym{SSHDS}{Sensor State History Data Service}
+\acronym{SSDS}{Sensor State Data Service}
+\acronym{SSPS}{Sensor State Processing Service}
+\acronym{PPS}{Policy Processing Service}
+\acronym{EAS}{Employee Application Service}
+\acronym{AAS}{Admin Application Service}
+\acronym{EA}{Employee Application}
+\acronym{AA}{Admin Application}
 
 \listoffigurestoc     % Spis rysunków.
 \vspace{1cm}          % vertical space
