--- a/docs/wut_thesis/tex/1-wstep.tex
+++ b/docs/wut_thesis/tex/1-wstep.tex
@@ -16,7 +16,7 @@ akcji, które należy podjąć, aby umożliwić ustalenie się badanych parametr
 właściwym poziomie.
 
 Utworzenie aplikacji miało przyczynić się do osiągnięcia dwóch głównych 
-celów, stawianych od początku przygotowywania pracy:
+celów, stawianych od początku przygotowywania systemu:
 
 \begin{enumerate}
     \item Poprawa warunków pracy - badania \cite{oseland2012} dowodzą, że 
