--- a/docs/wut_thesis/tex/2-istniejace-rozwiazania.tex
+++ b/docs/wut_thesis/tex/2-istniejace-rozwiazania.tex
@@ -9,4 +9,5 @@ dodatkiem do monitora, niż głównym celem wstawienia urządzenia do konkretnej
 W konsekwencji, wykonywanie pomiarów w wielu salach wiązałoby się z koniecznością 
 zakupu drogiego monitora dla każdej z nich. Proponowane w tej pracy rozwiązanie zawiera 
 jedynie zestaw czujników przesyłających pomiary do systemu, bez innych dodatków, co 
-znacznie minimalizuje koszt wdrożenia takiego rozwiązania.
+znacznie minimalizuje koszt wdrożenia takiego rozwiązania. Dzięki temu opłacalne staje
+się zbieranie pomiarów z wielu sal jednocześnie.
