--- a/docs/wut_thesis/tex/7-testy.tex
+++ b/docs/wut_thesis/tex/7-testy.tex
@@ -160,7 +160,8 @@ przetworzenia pomiaru na kolejce wiadomości.
 
 Ręczne uruchamianie każdego z testów pojedynczo może szybko stać się żmudnym zajęciem. 
 Aby temu zaradzić, w ramach pracy inżynierskiej wykorzystano narzędzie do automatyzacji 
-o nazwie Nuke. Za jego pomocą uruchomienie wszystkich testów sprowadza się do wykonania 
+o nazwie Nuke \cite{nuke2022}. 
+Za jego pomocą uruchomienie wszystkich testów sprowadza się do wykonania 
 jednej komendy. 
 
 Nuke pozwala na tworzenie własnych metod zwanych targetami, które automatyzują 
