--- a/docs/wut_thesis/bibliografia.bib
+++ b/docs/wut_thesis/bibliografia.bib
@@ -1,92 +1,3 @@
-% Artykuł w recenzowanym czasopiśmie.
-@article{szczypiorski2015,
-    author    = "Szczypiorski, K. and Janicki, A. and Wendzel, S",
-    title     = "{T}he {G}ood, {T}he {B}ad {A}nd {T}he {U}gly: {E}valuation of {W}i-{F}i {S}teganography",
-    journal   = "Journal of Communications",
-    volume    = "10",
-    number    = "10",
-    pages     = "747--752",
-    publisher = "Journal of Communications (JCM)",
-    year      = "2015",
-}
-
-% Książka.
-@book{goossens93,
-    author    = "Michel Goossens and Frank Mittelbach and Alexander Samarin",
-    title     = "The LaTeX Companion",
-    publisher = "Addison-Wesley",
-    address   = "Reading, Massachusetts",
-    year      = "1993",
-}
-
-% Fragment książki (np. zakres stron).
-@inbook{wang97,
-    author      = "Hao Wang",
-    title       = "A Logical Journey: From G{\"o}del to Philosophy.",
-    publisher   = "A Bradford Book",
-    pages       = "316",
-    year        = "1997"
-}
-
-% Fragment książki (np. esej), posiadający własny tytuł.
-@incollection{goedel95,
-    author      = "Kurt G{\"o}del",
-    title       = "Texts relating to the ontological proof",
-    booktitle   = "Unpublished Essays and Lectures",
-    publisher   = "Oxford University Press",
-    pages       = "429--437",
-    year        = "1995",
-}
-
-% Publikacja konferencyjna.
-@inproceedings{benzmuller2014,
-    author       = "{Ch}. Benzmuller and B. W. Paleo",
-    title        = "Automating {G\"o}del’s {O}ntological {P}roof of {G}od’s {E}xistence with {H}igher-order {A}utomated {T}heorem {P}rovers",
-    booktitle    = "European	Conference on Artificial Intelligence",
-    publisher    = "IOS Press",
-    howpublished = "Dostęp zdalny (10.04.2019): \url{http://page.mi.fu-berlin.de/cbenzmueller/papers/C40.pdf}",
-    year         = "2014",
-}
-
-% Raport techniczny.
-@techreport{duqu2011,
-    author      = "Bencsáth, B. and Pék, G. and Buttyán, L. and Félegyházi M.",
-    title       = "{D}uqu: {A} {S}tuxnet-like malware found in the wild",
-    institution = "Laboratory of Cryptography and System Security, Hungary",
-    year        = "2011"
-}
-
-% Specyfikacja techniczna.
-@manual{shs2015,
-    title        = "{FIPS} 180-4: {S}ecure {H}ash {S}tandard ({SHS})",
-    howpublished = "Dostęp zdalny (13.03.2019): \url{https://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.180-4.pdf}",
-    year         = "2015"
-}
-
-% Praca magisterska.
-@mastersthesis{wozniak2018,
-    author = "Woźniak, Piotr",
-    title  = "{P}rogramowanie kwadratowe w usuwaniu efektu rozmycia ruchu w fotografii cyfrowej",
-    school  = "Wydział Elektroniki i Technik Informacyjnych, Politechnika Warszawska",
-    year   = "2018",
-}
-
-% Nieopublikowany artykuł, dostępny np. tylko w internecie.
-@unpublished{koons2005,
-    author = "Koons, Robert C.",
-    title  = "{S}obel on {G\"o}del’s {O}ntological {P}roof",
-    note   = "Dostęp zdalny (25.04.2019): \url{http://www.robkoons.net/media/69b0dd04a9d2fc6dffff80b4ffffd524.pdf}",
-    year   = "2005"
-}
-
-% Źródło innego typu, np. repozytorium na GitHubie.
-@misc{dcp19,
-    author       = "Brodzki, Artur M.",
-    title        = "{I}mplementation of own steganography protocol {DCP}-19, loosely based on {HICCUPS}",
-    howpublished = "Dostęp zdalny (14.03.2019): \url{https://github.com/ArturB/DCP-19}",
-    year         = "2019"
-}
-
 @article{chinchiuan2014,
  author = {Chin-Chiuan, L. and Kuo-Chen, H.},
  title = {Effects of Lighting Color, Illumination Intensity, and Text Color on Visual Performance},
@@ -177,6 +88,54 @@
   urldate = {2022-01-08}
 }
 
+@online{mysql2022,
+  author = {Oracle Corporation},
+  title = {General Information},
+  year = {2022},
+  url = {https://dev.mysql.com/doc/refman/8.0/en/introduction.html},
+  urldate = {2022-01-08}
+}
+
+@online{influxdb2022,
+  author = {InfluxData Inc},
+  title = {Why use influxdb},
+  year = {2022},
+  url = {https://www.influxdata.com/products/influxdb/},
+  urldate = {2022-01-08}
+}
+
+@online{masstransit2022,
+  author = {MassTransit},
+  title = {Transports},
+  year = {2022},
+  url = {https://masstransit-project.com/usage/transports/},
+  urldate = {2022-01-08}
+}
+
+@online{rabbitmq2022,
+  author = {RabbitMq},
+  title = {AMQP 0-9-1 Model Explained},
+  year = {2022},
+  url = {https://www.rabbitmq.com/tutorials/amqp-concepts.html},
+  urldate = {2022-01-08}
+}
+
+@online{nuke2022,
+  author = {Matthias Koch},
+  title = {Getting started},
+  year = {2022},
+  url = {https://nuke.build/docs/getting-started/philosophy.html},
+  urldate = {2022-01-08}
+}
+
+@online{kubernetes2022,
+  author = {Kubernetes},
+  title = {What is Kubernetes?},
+  year = {2022},
+  url = {https://kubernetes.io/docs/concepts/overview/what-is-kubernetes/},
+  urldate = {2022-01-08}
+}
+
 @online{vickers2021,
   author = {Vickers, A},
   title = {Identity model customization in ASP.NET Core},
@@ -190,4 +149,12 @@
   year = {2015},
   title = {Building microservices},
   publisher = {O'Reilly}
+}
+
+@inbook{newmanb2015,
+    author      = "Sam Newam",
+    title       = "Building microservices",
+    publisher   = "O'Reilly",
+    pages       = "16-27",
+    year        = "2015"
 }
